--- a/HTML/WorkTools.html
+++ b/HTML/WorkTools.html
@@ -33,7 +33,7 @@
                 <br>
                 <a href="../index.html"><img id="logo" src="../images/logo/logo.png" alt="logo" width="150px"
                         height="150px" ;></a>
-                <h1 id="WorkToolsWelcomeH1">Welcome to the our food section</h1>
+                <h1 id="WorkToolsWelcomeH1">Welcome to the our woork tools section</h1>
             </article>
             <article>
                 <article id="productsTable">
