changed js source for cart.js

--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -82,7 +82,7 @@
         </nav>
     </footer>
     <script src="../Javascript/productsAndFunctions.js"></script>
-    <script src="../Javascript/Cart.js"></script>
+    <script src="../Javascript/cart.js"></script>
 </body>
 
 </html>
