--- a/HTML/WorkTools.html
+++ b/HTML/WorkTools.html
@@ -17,8 +17,8 @@
                 <li class="navBarItems"><a href="./Food.html">Food</a></li>
                 <li class="navBarItems"><a href="./TvsAndConsoles.html">Tvs and Consoles</a></li>
                 <li class="navBarItems"><a href="./WorkTools.html">Work Tools</a></li>
-                <li class="navBarItems"><a href="./smartPhones.html">SmartPhones</a></li>
-                <li id="navBarCart"><a href="#">Cart</a></li>
+                <li class="navBarItems"><a href="./smartPhones.html">Smart<br>Phones</a></li>
+                <li id="navBarCart"><a href="./cart.html">Cart</a></li>
             </ul>
         </nav>
     </header>
