--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li class="navBarItems"><a href="./HTML/Food.html">Food</a></li>
                 <li class="navBarItems"><a href="./HTML/TvsAndConsoles.html">Tvs and Consoles</li></a>
                 <li class="navBarItems"><a href="./HTML/WorkTools.html">Work Tools</a></li>
-                <li class="navBarItems"><a href="./HTML/smartPhones.html">SmartPhones</a></li>
+                <li class="navBarItems"><a href="./HTML/smartPhones.html">Smart<br>Phones</a></li>
                 <li id="navBarCart"><a href="./HTML/cart.html">Cart</a></li>
             </ul>
         </nav>
@@ -43,13 +43,14 @@
                 </p>
             </article>
             <article id="displayImages">
-                <img src="./images/backgrounds/tvsconsolesBg.jpg" width="400px" ; height="400px" ; alt="homeDisplayed1">
+                <img id="bigScreenPhoto1" src="./images/backgrounds/tvsconsolesBg.jpg" width="400px" ; height="400px" ; alt="homeDisplayed1">
                 <span id="changingImages">
                     our products<br>
                     <img src="./images/backgrounds/homeBg.jpg" id="images1" width="300px" ; height="350px" ;
                         alt="changeingImage1">
+                        <p id="photoProduct"></p><p id="photoPrice"></p>
                 </span>
-                <img src="./images/backgrounds/foodBg.jpg" width="400px" ; height="400px" ; alt="homeDisplayed2">
+                <img id="bigScreenPhoto2" src="./images/backgrounds/foodBg.jpg" width="400px" ; height="400px" ; alt="homeDisplayed2">
             </article>
             <br>
 
