--- a/HTML/Food.html
+++ b/HTML/Food.html
@@ -17,7 +17,7 @@
                 <li class="navBarItems"><a href="#">Food</a></li>
                 <li class="navBarItems"><a href="./TvsAndConsoles.html">Tvs and Consoles</a></li>
                 <li class="navBarItems"><a href="./WorkTools.html">Work Tools</a></li>
-                <li class="navBarItems"><a href="./smartPhones.html">SmartPhones</a></li>
+                <li class="navBarItems"><a href="./smartPhones.html">Smart<br>Phones</a></li>
                 <li id="navBarCart"><a href="./cart.html">Cart</a></li>
             </ul>
         </nav>
