--- a/HTML/TvsAndConsoles.html
+++ b/HTML/TvsAndConsoles.html
@@ -41,6 +41,11 @@
                         debitis dicta!</p>
                 </article>
             </article>
+            <article id="payForCart">
+                <p id="payP">you have <span id="numOfItemsInCart">0</span> items in your cart, total amount to pay is
+                    <span id="amountToPay">0</span> NIS
+                </p>
+            </article>
         </section>
     </main>
 
