--- a/HTML/WorkTools.html
+++ b/HTML/WorkTools.html
@@ -42,6 +42,11 @@
 
                 </article>
             </article>
+            <article id="payForCart">
+                <p id="payP">you have <span id="numOfItemsInCart">0</span> items in your cart, total amount to pay is
+                    <span id="amountToPay">0</span> NIS
+                </p>
+            </article>
         </section>
     </main>
     <footer>
